# flexstr

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  justfile
benchmarks/: Cargo.toml  README.md  clone.json  create.json  criterion.toml  rust-toolchain.toml  tables.toml
benchmarks/archive/0.8.1/: README.md  clone.json  convert.json  create.json
benchmarks/benches/: clone.rs  convert.rs  create.rs  import.rs  ops.rs
benchmarks/criterion/Clone/10/report/: index.html
benchmarks/criterion/Clone/Arc_str_/0/base/: sample.json
benchmarks/criterion/Clone/Arc_str_/10/base/: benchmark.json
benchmarks/criterion/Clone/Arc_str_/10/new/: estimates.json  tukey.json
benchmarks/criterion/Clone/Arc_str_/10/report/: index.html
benchmarks/criterion/Clone/Arc_str_/100/base/: estimates.json  sample.json
benchmarks/criterion/Clone/Arc_str_/100/change/: estimates.json
benchmarks/criterion/Clone/Arc_str_/100/new/: benchmark.json
benchmarks/criterion/Clone/Arc_str_/20/report/: index.html
benchmarks/criterion/Clone/Arc_str_/500/base/: tukey.json
benchmarks/criterion/Clone/Arc_str_/500/new/: benchmark.json
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Boxed)/0/base/: tukey.json
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Boxed)/0/change/: estimates.json
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Boxed)/0/report/: index.html
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Boxed)/10/base/: estimates.json
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Boxed)/10/report/: index.html
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Boxed)/100/new/: tukey.json
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Boxed)/100/report/: index.html
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Boxed)/20/base/: estimates.json
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Boxed)/20/change/: estimates.json
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Boxed)/20/new/: sample.json  tukey.json
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Boxed)/500/change/: estimates.json
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Boxed)/500/new/: estimates.json  tukey.json
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Boxed)/500/report/: index.html
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Optimized)/0/change/: estimates.json
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Optimized)/0/new/: benchmark.json  sample.json  tukey.json
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Optimized)/0/report/: index.html
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Optimized)/10/change/: estimates.json
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Optimized)/10/report/: index.html
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Optimized)/100/new/: tukey.json
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Optimized)/100/report/: index.html
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Optimized)/20/base/: tukey.json
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Optimized)/20/change/: estimates.json
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Optimized)/20/new/: benchmark.json
benchmarks/criterion/Clone/FlexStr 0.10 (LocalStr - Optimized)/500/change/: estimates.json
benchmarks/criterion/Clone/FlexStr 0.10 (SharedStr - Boxed)/0/base/: benchmark.json
benchmarks/criterion/Clone/FlexStr 0.10 (SharedStr - Boxed)/0/change/: estimates.json
benchmarks/criterion/Clone/FlexStr 0.10 (SharedStr - Boxed)/10/new/: sample.json  tukey.json
benchmarks/criterion/Clone/FlexStr 0.10 (SharedStr - Boxed)/10/report/: index.html
benchmarks/criterion/Clone/FlexStr 0.10 (SharedStr - Boxed)/report/: index.html
benchmarks/criterion/Clone/FlexStr 0.9 (LocalStr)/report/: index.html
benchmarks/criterion/Clone/InlineFlexStr 0.1 (InlineStr)/report/: index.html
benchmarks/criterion/Clone/report/: index.html
benchmarks/criterion/Import as borrowed, own and destroy/20/report/: index.html
benchmarks/criterion/Import as borrowed, own and destroy/FlexStr 0.10 (LocalStr)/report/: index.html
benchmarks/criterion/Import as borrowed, own and destroy/report/: index.html
benchmarks/criterion/Import as owned and destroy/0/report/: index.html
benchmarks/criterion/Import as owned and destroy/20/report/: index.html
benchmarks/criterion/Import as owned and destroy/Cow_'_, str_/report/: index.html
benchmarks/criterion/Import as owned and destroy/FlexStr 0.10 (LocalStr - As is)/report/: index.html
benchmarks/criterion/Import as owned and destroy/FlexStr 0.10 (LocalStr - Optimized)/report/: index.html
benchmarks/criterion/Import as owned and destroy/FlexStr 0.10 (SharedStr - As is)/report/: index.html
benchmarks/criterion/Import as owned and destroy/FlexStr 0.10 (SharedStr - Optimized)/report/: index.html
benchmarks/criterion/Import as owned and destroy/Rc_str_/report/: index.html
benchmarks/criterion/report/: index.html
flexstr/: Cargo.toml
flexstr/src/: builder.rs  custom.rs  impls.rs  inline.rs  inner.rs  lib.rs  macros.rs  traits.rs
flexstr/src/storage/: borrow.rs  heap.rs  inline.rs  mod.rs  static_ref.rs
flexstr/src/string/: b_str.rs  c_str.rs  mod.rs  os_str.rs  path.rs  raw_str.rs  std_str.rs
flexstr/src/string/b_str/: impls.rs  mod.rs
flexstr/src/string/c_str/: impls.rs  mod.rs
flexstr/src/string/os_str/: impls.rs  mod.rs
flexstr/src/string/path/: impls.rs  mod.rs
flexstr/src/string/raw_str/: impls.rs  mod.rs
flexstr/src/string/std_str/: impls.rs  mod.rs
flexstr_support/: Cargo.toml  README.md
flexstr_support/src/: bytes.rs  cstr.rs  lib.rs  osstr.rs  path.rs  str.rs  traits.rs
inline_flexstr/: Cargo.toml  README.md
inline_flexstr/src/: bytes.rs  cstr.rs  inline.rs  lib.rs  osstr.rs  path.rs  str.rs
inline_flexstr/tests/: test_bytes.rs  test_cstr.rs  test_osstr.rs  test_path.rs  test_str.rs
inline_flexstr/tests/common/: as_ref.rs  basic.rs  borrow.rs  comparison.rs  conversion.rs  cstr_specific.rs  display.rs  edge_cases.rs  errors.rs  from_str.rs  index.rs  mod.rs  serialize.rs  socket.rs  stringlike.rs  try_from.rs
(+720 files in other folders)
