[workspace]
members = ["flexstr_support", "inline_flexstr"]
exclude = ["benchmarks"]

[package]
name = "flexstr"
version = "0.10.5"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A flexible, simple to use, clone-efficient string type for Rust"
repository = "https://github.com/nu11ptr/flexstr"
documentation = "https://docs.rs/flexstr"
keywords = ["string", "rc_str", "arc_str", "refcount", "inline"]
categories = [
    "data-structures",
    "memory-management",
    "no-std",
    "text-processing",
]
readme = "README.md"
edition = "2024"
exclude = ["docs/**"]

[features]
default = ["std", "str"]
sqlx_pg_arrays = ["sqlx", "sqlx/postgres"]
# Does not use and forbids all unsafe code (unless windows_min_unsafe is also enabled, but that only impacts Windows)
safe = ["flexstr_support/safe", "inline_flexstr/safe"]
std = ["flexstr_support/std", "inline_flexstr/std", "serde?/std"]
# Uses the minimum unsafe code possible to support OsStr/Path on Windows. Doesn't impact any other string types or operating systems.
win_min_unsafe = [
    "flexstr_support/win_min_unsafe",
    "inline_flexstr/win_min_unsafe",
    "safe",
]

# String type features
bytes = ["flexstr_support/bytes", "inline_flexstr/bytes"]
cstr = ["flexstr_support/cstr", "inline_flexstr/cstr"]
osstr = ["flexstr_support/osstr", "inline_flexstr/osstr", "std"]
path = ["flexstr_support/path", "inline_flexstr/path", "osstr"]
str = ["flexstr_support/str", "inline_flexstr/str"]

[dependencies.serde]
version = "1"
default-features = false
optional = true

[dependencies.sqlx]
version = "0.8"
default-features = false
optional = true

[dependencies.inline_flexstr]
path = "inline_flexstr"
version = "0.1.5"
default-features = false

[dependencies.flexstr_support]
path = "flexstr_support"
version = "0.1.3"
default-features = false

[dev-dependencies.serde_json]
version = "1"

[package.metadata.docs.rs]
features = ["bytes", "cstr", "osstr", "path", "serde", "std", "str"]
rustdoc-args = ["--cfg", "docsrs"]
