[package]
name = "benchmarks"
version = "0.1.0"
edition = "2024"

[profile.bench]
debug = true

[[bench]]
name = "import"
harness = false

[[bench]]
name = "clone"
harness = false

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
flexstr = { path = "../" }
inline_flexstr = { path = "../inline_flexstr" }
flexstr09 = { package = "flexstr", git = "https://github.com/nu11ptr/flexstr", rev = "fe86d0a8c8f83676b93653e8627edbc5a634b898" }
