[package]
name = "flexstr"
version = "0.8.1"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A flexible, simple to use, immutable, clone-efficient `String` replacement for Rust"
repository = "https://github.com/nu11ptr/flexstr"
documentation = "https://docs.rs/flexstr"
keywords = ["string", "rc_str", "arc_str", "refcount", "inline"]
categories = ["data-structures", "memory-management", "no-std", "text-processing"]
readme = "../README.md"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
int_convert = ["itoa"]
fast_format = ["ufmt", "ufmt-write"]
fp_convert = ["ryu"]
std = []

[dependencies]
itoa = { version = "1", optional = true }
ryu = { version = "1", optional = true }
serde = { version = "1", optional = true }
ufmt = { version = "0.1", optional = true }
ufmt-write = { version = "0.1", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
