[package]
name = "flexstr"
version = "0.9.1"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A flexible, simple to use, immutable, clone-efficient `String` replacement for Rust"
repository = "https://github.com/nu11ptr/flexstr"
documentation = "https://docs.rs/flexstr"
keywords = ["string", "rc_str", "arc_str", "refcount", "inline"]
categories = ["data-structures", "memory-management", "no-std", "text-processing"]
readme = "../README.md"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
b_str = ["bstr"]
c_str = ["std"]
os_str = ["std"]
path = ["std"]
raw_str = []

default = ["std"]
fast_format = ["ufmt", "ufmt-write"]
fp_convert = ["ryu"]
int_convert = ["itoa"]
std = []

[dependencies]
bstr = { version = "0.2", optional = true }
itoa = { version = "1", optional = true }
ryu = { version = "1", optional = true }
serde = { version = "1", optional = true }
static_assertions = "1"
ufmt = { version = "0.1", optional = true }
ufmt-write = { version = "0.1", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
