[package]
name = "flexstr_support"
version = "0.1.0"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Support crate for 'flexstr' and 'inline_flexstr'"
repository = "https://github.com/nu11ptr/flexstr/flexstr_support"
documentation = "https://docs.rs/flexstr_support"
keywords = ["string", "support"]
categories = [
    "data-structures",
    "memory-management",
    "no-std",
    "text-processing",
]
readme = "README.md"
edition = "2024"

[features]
default = ["std", "str"]
# Does not use and forbids all unsafe code (unless windows_min_unsafe is also enabled, but that only impacts Windows)
safe = []
std = []
# Uses the minimum unsafe code possible to support OsStr/Path on Windows. Doesn't impact any other string types or operating systems.
win_min_unsafe = ["safe"]

# String type features
bytes = []
cstr = []
osstr = []
path = ["osstr"]
str = []
